ÂSe realiza configuracion de base de datos en properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+controller.properties.maestros.base-path=/api/v1
 
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+springdoc.api-docs.enabled=true
+
+#Base por defecto
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/computelematic?currentSchema=data_cmt
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+server.port=1818
