Se realiza creacion de metodos para guardar archivos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
-controller.properties.maestros.base-path=/api/v1
+controller.properties.computelematic.base-path=/api/v1
 
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 springdoc.api-docs.enabled=true
+
+
+#Configuracion tamaño de archivos
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+media.location=mediafiles
 
 #Base por defecto
 spring.datasource.driverClassName=org.postgresql.Driver
